--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # eclipse
-bin
+eclipse
 *.launch
 .settings
 .metadata
@@ -13,12 +13,15 @@ out
 *.iml
 .idea
 
+# vs code
+.vscode
+
 # gradle
 build
 .gradle
 
 # other
-eclipse
+bin
 run
 *.jar
 
