--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,9 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0'
-group = 'com.yourname.modid' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'modid'
+version = '1.12.0-0.1.0'
+group = 'cz.kajacx.limitedchests' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'limitedchests'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
