--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,38 +5,56 @@
 # Find more information on toml format here:  https://github.com/toml-lang/toml
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml" #mandatory
+
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
 loaderVersion="[36,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
 license="MIT License"
+
 # A URL to refer people to when problems occur with this mod
 issueTrackerURL="https://github.com/kajacx/LimitedChests/issues" #optional
+
+
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
+
 # The modid of the mod
 modId="limitedchests" #mandatory
+
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
 #version="${file.jarVersion}" #mandatory
 version="1.16.5-0.1.0" #mandatory
+
 # A display name for the mod
 displayName="Limited Chests" #mandatory
+
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
+
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
+
 # A file name (in the root of the mod JAR) containing a logo for display
 #logoFile="limited_chests_logo.png" #optional
+
 # A text field displayed in the mod UI
-credits="Thanks for this example mod goes to Java" #optional
+credits='''
+I thank "Tutorials by Kaupenjoe" for his "Get Started with Minecraft Modding 1.16.5 (Forge)" YouTube tutorial series.
+Without it, this mod would simply not function.
+''' #optional
+
 # A text field displayed in the mod UI
 authors="kajacx" #optional
+
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 Adds chests with limitable item slots, both for item count and item type.
 '''
+
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.limitedchests]] #optional
     # the modid of the dependency
@@ -49,11 +67,12 @@ Adds chests with limitable item slots, both for item count and item type.
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
+
 # Here's another dependency
 [[dependencies.limitedchests]]
     modId="minecraft"
     mandatory=true
-# This version range declares a minimum of the current minecraft version up to but not including the next major version
+    # This version range declares a minimum of the current minecraft version up to but not including the next major version
     versionRange="[1.16.5,1.17)"
     ordering="NONE"
     side="BOTH"
